fény az alagut végén

--- a/angularclient/src/app/components/gamehandler/gamehandler.component.html
+++ b/angularclient/src/app/components/gamehandler/gamehandler.component.html
@@ -1,12 +1,15 @@
 <h1> Game </h1>
 <div>
   <label> help </label>
- <button type="button" (click)="createDeck()">Create & Shuffle </button>
+ <button type="button" (click)="onStart()">Create & Shuffle </button>
 
- <ul>  
-    <li *ngFor="#card of own_cards">
-      {{ own_cards.color }} is {{ own_cards.value }} years old.
-    </li>
-  </ul>
+ <table>  
+
+    <tr>
+      <button  *ngFor="let card of own_cards" type="button">
+      {{ card.color }} is {{ card.value }} years old.
+      </button>
+    </tr>
+  </table>
 
 </div>
