--- a/angularclient/src/app/components/gamehandler/gamehandler.component.html
+++ b/angularclient/src/app/components/gamehandler/gamehandler.component.html
@@ -1,15 +1,17 @@
 <h1> Game </h1>
-<h2> In game Points: actualScore</h2>
+<h2> In game Points: {{ this.player1.actualScore }}</h2>
+<h3>Dominant color: {{ this.dominantColor }}</h3>
+<h3>Deck size: {{ this.deck.length }}</h3>
 <div>
 
   <table>
-    <tr [hidden]="this.status != 'inGame_active'">
-      <button *ngFor="let card of this.player1.hand" type="button" (click)="playCard(card)">
-          Kuka
+    <tr>
+      <button [disabled]="this.status != 'inGame_active'" *ngFor="let card of this.player1.hand" type="button" (click)="playCard(card)">
+          {{ card.figure }}/{{ card.color }} : {{ card.value }}
       </button>
     </tr>
   </table>
-  <input [(ngModel)]="status"  /><button (click)="enterLobby()">Send</button> 
+  <input [(ngModel)]="status"/><button [disabled]="this.status != 'offline'" (click)="enterLobby()">Enter lobby</button> 
 </div>
 
 
