--- a/angularclient/src/app/components/gamehandler/gamehandler.component.html
+++ b/angularclient/src/app/components/gamehandler/gamehandler.component.html
@@ -1,6 +1,16 @@
 
-<div class="row" [hidden]="this.status != 'offline' && this.status != 'inLobby'">
-    <input  [(ngModel)]="status" disabled/><button [disabled]="this.status != 'offline'" (click)="enterLobby()">Enter lobby</button> 
+<div class="row">
+    <div class="alert alert-success col-8" [hidden]="this.status != 'inGame_won'">
+        You won!
+        <a href="/game" class="btn">Back to lobby</a>
+    </div>
+    <div class="alert alert-danger col-8" [hidden]="this.status != 'inGame_lost'">
+        You lost! :(
+        <a href="/game" class="btn">Back to lobby</a>
+    </div>
+    <div [hidden]="this.status != 'offline' && this.status != 'inLobby'">
+        <input  [(ngModel)]="status" disabled/><button [disabled]="this.status != 'offline'" (click)="enterLobby()">Enter lobby</button> 
+    </div>
 </div>
 <div class="row" [hidden]="this.status != 'inGame_hold' && this.status != 'inGame_active'">
     <div class="col-6">
@@ -20,5 +30,5 @@
         </table>
     </div>
 </div>
-{{ this.status }}
+
 
