--- a/angularclient/src/app/components/login/login.component.html
+++ b/angularclient/src/app/components/login/login.component.html
@@ -1,12 +1,12 @@
-<h2 class="page-header">Login</h2>
+<h2 class="page-header">Bejelentkezés</h2>
 <form (submit)="onLoginSubmit()">
     <div class="form-group">
-      <label>Usename</label>
+      <label>Felhasználónév</label>
       <input type="text" class="form-control" [(ngModel)]="username" name="username">
     </div>
     <div class="form-group">
-      <label >Password</label>
+      <label >Jelszó</label>
       <input type="password" class="form-control" [(ngModel)]="password" name="password">
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">Bejelentkezés</button>
   </form>
